--- a/MemeMe 1.0/Base.lproj/LaunchScreen.storyboard
+++ b/MemeMe 1.0/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +22,49 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="us2-lB-2S1">
+                                <rect key="frame" x="67" y="213.5" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="240" id="CnC-AX-LbN"/>
+                                    <constraint firstAttribute="width" secondItem="us2-lB-2S1" secondAttribute="height" multiplier="1:1" id="Unr-BR-EUW"/>
+                                    <constraint firstAttribute="width" constant="240" id="n9N-fJ-AJa"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright 2017 Andrew Jackson" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ni6-tJ-FN6">
+                                <rect key="frame" x="32" y="638" width="311" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MemeMe 1.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DzV-0Y-dhc">
+                                <rect key="frame" x="78" y="141.5" width="220" height="64"/>
+                                <fontDescription key="fontDescription" name="Papyrus" family="Papyrus" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <size key="shadowOffset" width="2" height="2"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.019813345749999999" green="0.38944616910000002" blue="0.54756832119999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ni6-tJ-FN6" secondAttribute="trailing" constant="16" id="0sf-KO-doL"/>
+                            <constraint firstItem="us2-lB-2S1" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="K8I-CQ-Gre"/>
+                            <constraint firstItem="Ni6-tJ-FN6" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="16" id="PdQ-PL-lqA"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Ni6-tJ-FN6" secondAttribute="bottom" constant="8" id="Rez-8Z-zMD"/>
+                            <constraint firstItem="DzV-0Y-dhc" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="TP2-MU-pSd"/>
+                            <constraint firstItem="us2-lB-2S1" firstAttribute="top" secondItem="DzV-0Y-dhc" secondAttribute="bottom" constant="8" id="UzB-oX-Urk"/>
+                            <constraint firstItem="Ni6-tJ-FN6" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rD4-Ef-N4h"/>
+                            <constraint firstItem="us2-lB-2S1" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="sG2-JX-eXG"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="442" y="354"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Launch" width="90" height="90"/>
+    </resources>
 </document>
